--- a/template.yaml
+++ b/template.yaml
@@ -2,12 +2,12 @@
       unique_id: huseffekt_exl_elbil
       unit_of_measurement: "kW"
       state: >
-        {% set net_power = states('sensor.power_meter_active_power') | float(0) %}
+        {% set net_power = states('sensor.power_meter_active_power') | float(0) %} #YOUR ACTIVE POWER METER
         {% set import = -net_power if net_power < 0 else 0 %}
         {% set export = net_power if net_power > 0 else 0 %}
-        {% set elbil = states('sensor.ADD_YOUR_WALLBOX') | float(0) %}  #ADD YOUR OWN WALLBOX SENSOR IN kW
-        {% set batt = states('sensor.batteries_charge_discharge_power') | float(0) %}
-        {% set solar = states('sensor.input_power_with_efficiency_loss_kw') | float(0) %}
+        {% set elbil = states('sensor.ADD_YOUR_WALLBOX') | float(0) %}  #YOUR WALLBOX IN kW
+        {% set batt = states('sensor.batteries_charge_discharge_power') | float(0) %} #YOUR BATTERY DISCHARGE POWER
+        {% set solar = states('sensor.input_power_with_efficiency_loss_kw') | float(0) %} #YOUR SOLAR POWER
 
         {# Batteriurladdning hjälper huset, batteriladdning ska dras bort #}
         {% set batt_out = -batt if batt < 0 else 0 %}
