--- a/template.yaml
+++ b/template.yaml
@@ -834,23 +834,26 @@
           {%- set soc = states('sensor.batteries_state_of_capacity') | float(0) -%}
           {%- set soc_limit = states('input_number.battery_soc_limit_supercheap') | float(80) -%}
 
-          {%- set prices_today = state_attr('sensor.YOUR_NORDPOOL_SENSOR', 'today') or [] -%}
-          {%- set prices_tomorrow = state_attr('sensor.YOUR_NORDPOOL_SENSOR', 'tomorrow') or [] -%}
-          {%- set tomorrow_valid = state_attr('sensor.YOUR_NORDPOOL_SENSOR', 'tomorrow_valid') -%}
+          {%- set prices_today = state_attr('sensor.nordpool_kwh_se4_sek_1_10_0', 'today') or [] -%}
+          {%- set prices_tomorrow = state_attr('sensor.nordpool_kwh_se4_sek_1_10_0', 'tomorrow') or [] -%}
+          {%- set tomorrow_valid = state_attr('sensor.nordpool_kwh_se4_sek_1_10_0', 'tomorrow_valid') -%}
           {%- set prices = prices_today + (prices_tomorrow if tomorrow_valid else []) -%}
 
           {%- set now_dt = now() -%}
           {%- set start_of_today = now_dt.replace(hour=0, minute=0, second=0, microsecond=0) -%}
 
-          {%- set cheapest = namespace(start=None, avg=None, index=None) -%}
+          {%- set cheapest = namespace(start=None, avg=None) -%}
           {%- set min_price = namespace(value=999, idx=None) -%}
 
           {%- for i in range(0, (prices | length) - required_hours + 1) -%}
-                    {%- set window = prices[i:i+required_hours] -%}
-                    {%- set avg = (window | map('float') | sum) / (window | length) -%}
-                    {%- if avg < min_price.value -%}
-                              {%- set min_price.value = avg -%}
-                              {%- set min_price.idx = i -%}
+                    {%- set window_start_dt = start_of_today + timedelta(hours=i) -%}
+                    {%- if window_start_dt >= now_dt -%} {# endast framtida timmar #}
+                              {%- set window = prices[i:i+required_hours] -%}
+                              {%- set avg = (window | map('float') | sum) / (window | length) -%}
+                              {%- if avg < min_price.value -%}
+                                        {%- set min_price.value = avg -%}
+                                        {%- set min_price.idx = i -%}
+                              {%- endif -%}
                     {%- endif -%}
           {%- endfor -%}
 
@@ -859,16 +862,19 @@
                     {%- set cheapest.avg = min_price.value -%}
           {%- endif -%}
 
+          {%- set result = "" -%}
+
           {%- if cheapest.start -%}
                     {%- set forecast = state_attr('sensor.solar_forecast_west', 'west') -%}
                     {%- set solar_kwh = 0 -%}
+
                     {%- if forecast and 'watt_hours_period' in forecast -%}
                               {%- set all_entries = forecast['watt_hours_period'] -%}
-                              {%- set interval_end_dt = cheapest.start + timedelta(hours=12) -%}
+                              {%- set interval_end_dt = cheapest.start + timedelta(hours=required_hours) -%}
                               {%- set filtered = all_entries
                                         | selectattr('date', 'defined')
                                         | selectattr('date', '>=', cheapest.start.isoformat())
-                                        | selectattr('date', '<=', interval_end_dt.isoformat())
+                                        | selectattr('date', '<', interval_end_dt.isoformat())
                                         | list -%}
                               {%- set valid_entries = filtered
                                         | selectattr('values', 'defined')
@@ -880,17 +886,11 @@
                     {%- endif -%}
 
                     {%- if solar_kwh < solar_limit and soc < soc_limit and cheapest.avg < threshold -%}
-                              {{ cheapest.start.isoformat() }} - {{ (cheapest.start + timedelta(hours=required_hours)).isoformat() }}
-                              {# Debug:
-                              Pris valt: {{ cheapest.avg }}
-                              Solar_kwh: {{ solar_kwh }}
-                              #}
-                    {%- else -%}
-                              ""
+                              {%- set result = cheapest.start.isoformat() ~ " - " ~ (cheapest.start + timedelta(hours=required_hours)).isoformat() -%}
                     {%- endif -%}
-          {%- else -%}
-                    ""
           {%- endif -%}
+
+          {{ result }}
 
 ---------------------------------------------------------------------------------------------------------
 
